server/.happypack/s-1300825062
SyntaxError: C:/Users/Dmitriy/WebstormProjects/FirstProject/client/containers/Blocks/Blocks.js: Unexpected token (48:13)

[0m [90m 46 | [39m        console[33m.[39mlog(e)[33m;[39m
 [90m 47 | [39m        [36mthis[39m[33m.[39msetState({eventType[33m:[39m e[33m.[39mtype})[33m;[39m
[31m[1m>[22m[39m[90m 48 | [39m        [36mif[39m(e[33m.[39m)
 [90m    | [39m             [31m[1m^[22m[39m
 [90m 49 | [39m        [36mthis[39m[33m.[39mslider[33m.[39mslickNext()[33m;[39m
 [90m 50 | [39m    }
 [90m 51 | [39m[0m

BabelLoaderError: SyntaxError: C:/Users/Dmitriy/WebstormProjects/FirstProject/client/containers/Blocks/Blocks.js: Unexpected token (48:13)

[0m [90m 46 | [39m        console[33m.[39mlog(e)[33m;[39m
 [90m 47 | [39m        [36mthis[39m[33m.[39msetState({eventType[33m:[39m e[33m.[39mtype})[33m;[39m
[31m[1m>[22m[39m[90m 48 | [39m        [36mif[39m(e[33m.[39m)
 [90m    | [39m             [31m[1m^[22m[39m
 [90m 49 | [39m        [36mthis[39m[33m.[39mslider[33m.[39mslickNext()[33m;[39m
 [90m 50 | [39m    }
 [90m 51 | [39m[0m

    at transpile (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\babel-loader\lib\index.js:63:13)
    at Object.module.exports (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\babel-loader\lib\index.js:163:20)
    at applySyncOrAsync (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:341:21)
    at apply (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:268:5)
    at C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:131:7
    at applyPitchLoader (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:184:14)
    at applyPitchLoader (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:192:14)
    at applyPitchLoader (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:192:14)
    at applyPitchLoaders (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:222:4)
    at applyLoaders (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:116:3)